--- a/src/partials/bio.html
+++ b/src/partials/bio.html
@@ -1,9 +1,11 @@
 <section class="bio">
-  <h2 class="bio__position title">Front-End Developer</h2>
-  <h1 class="bio__name title">Oleksandr Kutsenko</h1>
-  <p class="bio__shortinfo">
-    Good evening, we are from Ukraine! I was born in 1994, at the moment I am
-    taking full stack developer courses. At what stage of learning, see the
-    Progress tab.
-  </p>
+  <div class="container">
+    <h2 class="bio__position title">Front-End Developer</h2>
+    <h1 class="bio__name title">Oleksandr Kutsenko</h1>
+    <p class="bio__shortinfo">
+      Good evening, we are from Ukraine! I was born in 1994, at the moment I am
+      taking full stack developer courses. At what stage of learning, see the
+      Progress tab.
+    </p>
+  </div>
 </section>
