--- a/src/sass/partials/bio.scss
+++ b/src/sass/partials/bio.scss
@@ -1,5 +1,5 @@
 .bio {
-    padding-top: 24px;
+    padding-top: 64px;
     padding-bottom: 24px;
 }
 
@@ -15,21 +15,21 @@
 
 .bio__shortinfo {
     text-align: center;
-    width: 220px;
+    // width: 220px;
 
-    @media screen and (min-width: 480px) {
-        width: 700px;
-        max-width: 100%;
-    }
+    // @media screen and (min-width: 480px) {
+    //     width: 700px;
+    //     max-width: 100%;
+    // }
 
-    @media screen and (min-width: 768px) {
-        width: 1000px;
-        max-width: 100%;
-    }
+    // @media screen and (min-width: 768px) {
+    //     width: 1000px;
+    //     max-width: 100%;
+    // }
 
-    @media screen and (min-width: 1200px) {
-        width: 1000px;
-        max-width: 100%;
-        text-align: start;
-    }
+    // @media screen and (min-width: 1200px) {
+    //     width: 1000px;
+    //     max-width: 100%;
+    //     text-align: start;
+    // }
 }
